--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,43 +5,67 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: laravel_app
-    container_name: laravel_app
+    image: serialnumber-qrcode_app:latest
+    container_name: serialnumber-qrcode_app
     restart: unless-stopped
     working_dir: /var/www
     volumes:
       - .:/var/www
+      - ./storage/:/var/www/storage
+    environment:
+      APP_ENV: ${APP_ENV}
+      APP_DEBUG: true
+      APP_KEY: ${APP_KEY}
+      DB_CONNECTION: mysql
+      DB_HOST: database
+      DB_PORT: 3306
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
     networks:
-      - laravel
+      laravel:
+          aliases:
+            - qrcode
+    depends_on:
+        - database
+
 
   webserver:
     image: nginx:alpine
     container_name: nginx
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
       - .:/var/www
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - laravel
+      laravel:
+          aliases:
+            - qrcode
 
-  db:
-    image: mariadb:10.4
-    container_name: mariadb
+  database:
+    image: mariadb:lts-jammy
+    # container_name: mariadb
     restart: unless-stopped
     environment:
-      MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: qrcode
-      MYSQL_USER: web
-      MYSQL_PASSWORD: P@ssword%
+      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
+      MARIADB_DATABASE: ${DB_DATABASE}
+      MARIADB_USER: ${DB_USERNAME}
+      MARIADB_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     networks:
-      - laravel
+      laravel:
+          aliases:
+            - qrcode
 
 networks:
   laravel:
+      external: true
+      driver: bridge
 
 volumes:
   mysql_data:
