--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,69 +3,72 @@ version: '3.8'
 services:
   app:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ./
+      dockerfile: ./Dockerfile
     image: serialnumber-qrcode_app:latest
     container_name: serialnumber-qrcode_app
     restart: unless-stopped
-    working_dir: /var/www
+    working_dir: /var/www/html
     volumes:
-      - .:/var/www
-      - ./storage/:/var/www/storage
+      - .:/var/www/html
+      - ./storage/:/var/www/html/storage
+      - ./storage/app:/var/www/html/storage/app
     environment:
+      APP_NAME: ${APP_NAME}
       APP_ENV: ${APP_ENV}
-      APP_DEBUG: true
+      APP_DEBUG: ${APP_DEBUG}
       APP_KEY: ${APP_KEY}
+      APP_URL: ${APP_URL}
       DB_CONNECTION: mysql
       DB_HOST: database
       DB_PORT: 3306
       DB_DATABASE: ${DB_DATABASE}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
+      MAIL_MAILER: ${MAIL_MAILER}
+      MAIL_HOST: ${MAIL_HOST}
+      MAIL_PORT: ${MAIL_PORT}
+      MAIL_USERNAME: ${MAIL_USERNAME}
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      MAIL_ENCRYPTION: ${MAIL_ENCRYPTION}
+      MAIL_FROM_ADDRESS: ${MAIL_FROM_ADDRESS}
+      MAIL_FROM_NAME: ${MAIL_FROM_NAME}
     networks:
-      laravel:
-          aliases:
-            - qrcode
+      - n-laravel
     depends_on:
-        - database
+      - database
 
 
   webserver:
-    image: nginx:alpine
+    image: nginx
     container_name: nginx
     restart: unless-stopped
     ports:
       - "8080:80"
     volumes:
-      - .:/var/www
+      - .:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      laravel:
-          aliases:
-            - qrcode
+      - n-laravel
 
   database:
     image: mariadb:lts-jammy
-    # container_name: mariadb
     restart: unless-stopped
+    # ports:
+    #   - "3307:3306"
+    volumes:
+      - v-database:/var/lib/mysql
     environment:
-      MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
       MARIADB_DATABASE: ${DB_DATABASE}
       MARIADB_USER: ${DB_USERNAME}
       MARIADB_PASSWORD: ${DB_PASSWORD}
-    ports:
-      - "3307:3306"
-    volumes:
-      - mysql_data:/var/lib/mysql
+      MARIADB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     networks:
-      laravel:
-          aliases:
-            - qrcode
-
-networks:
-  laravel:
-      external: true
-      driver: bridge
+      - n-laravel
 
 volumes:
-  mysql_data:
+  v-database:
+
+networks:
+  n-laravel:
+      driver: bridge
