--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     index index.php index.html;
     server_name localhost;
 
-    root /var/www/public;
+    root /var/www/html/public;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -19,4 +19,34 @@ server {
     location ~ /\.ht {
         deny all;
     }
+    # listen 80 default_server;
+    # listen [::]:80 default_server;
+
+    # root /var/www/html/public;
+    # client_max_body_size 10M;
+    # add_header X-Frame-Options "SAMEORIGIN";
+    # add_header X-Content-Type-Options "nosniff";
+
+    # index index.php;
+
+    # charset utf-8;
+
+    # location / {
+    #     try_files $uri $uri/ /index.php?$query_string;
+    # }
+
+    # location = /favicon.ico {
+    #     access_log off; log_not_found off;
+    # }
+    # location = /robots.txt {
+    #     access_log off; log_not_found off;
+    # }
+
+    # error_page 404 /index.php;
+
+    # location ~ \.php$ {
+    #     fastcgi_pass 127.0.0.1:9000;
+    #     fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+    #     include fastcgi_params;
+    # }
 }
