--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - .:/var/www/html
       - ./storage/:/var/www/html/storage
       - ./storage/app:/var/www/html/storage/app
+    #   - ./php.ini:/usr/local/etc/php
     environment:
       APP_NAME: ${APP_NAME}
       APP_ENV: ${APP_ENV}
@@ -38,24 +39,24 @@ services:
     depends_on:
       - database
 
-
   webserver:
     image: nginx
     container_name: nginx
     restart: unless-stopped
     ports:
       - "8080:80"
+      # - "8443:443"
     volumes:
       - .:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      #- /opt/lampp/etc/ssl.crt:/etc/nginx/ssl.crt
+      #- /opt/lampp/etc/ssl.key:/etc/nginx/ssl.key
     networks:
       - n-laravel
 
   database:
     image: mariadb:lts-jammy
     restart: unless-stopped
-    # ports:
-    #   - "3307:3306"
     volumes:
       - v-database:/var/lib/mysql
     environment:
@@ -66,9 +67,47 @@ services:
     networks:
       - n-laravel
 
+  worker:
+    build:
+      context: ./
+      dockerfile: ./Dockerfile
+    image: serialnumber-qrcode_worker:latest
+    container_name: serialnumber-qrcode_worker
+    restart: unless-stopped
+    working_dir: /var/www/html
+    volumes:
+      - .:/var/www/html
+      - ./storage/:/var/www/html/storage
+      - ./storage/app:/var/www/html/storage/app
+    environment:
+      APP_NAME: ${APP_NAME}
+      APP_ENV: ${APP_ENV}
+      APP_DEBUG: ${APP_DEBUG}
+      APP_KEY: ${APP_KEY}
+      APP_URL: ${APP_URL}
+      DB_CONNECTION: mysql
+      DB_HOST: database
+      DB_PORT: 3306
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+      MAIL_MAILER: ${MAIL_MAILER}
+      MAIL_HOST: ${MAIL_HOST}
+      MAIL_PORT: ${MAIL_PORT}
+      MAIL_USERNAME: ${MAIL_USERNAME}
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      MAIL_ENCRYPTION: ${MAIL_ENCRYPTION}
+      MAIL_FROM_ADDRESS: ${MAIL_FROM_ADDRESS}
+      MAIL_FROM_NAME: ${MAIL_FROM_NAME}
+    networks:
+      - n-laravel
+    depends_on:
+      - database
+    command: php artisan queue:work --sleep=3 --tries=3
+
 volumes:
   v-database:
 
 networks:
   n-laravel:
-      driver: bridge
+    driver: bridge
