--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,38 @@
+# server {
+#     listen 80;
+#     server_name qr.quokkademo.com;
+
+#     location / {
+#         proxy_pass http://app:9000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
+## ========================================================
+
+## =================================== working but ssl error
+# server {
+#     listen 80;
+#     server_name qr.quokkademo.com;
+
+#     location / {
+#         return 301 https://$host$request_uri;
+#     }
+# }
+
 server {
+    # listen 443;
     listen 80;
-    index index.php index.html;
-    server_name localhost;
+    server_name qr.quokkademo.com;
+
+    # ssl_certificate /etc/nginx/ssl.crt/quokkademo_com.crt;
+    # ssl_certificate_key /etc/nginx/ssl.key/quokkademo.key;
+    # # ssl_certificate_chain /etc/nginx/ssl.crt/QUOKKADEMO.COM.pem;
 
     root /var/www/html/public;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -19,34 +48,5 @@ server {
     location ~ /\.ht {
         deny all;
     }
-    # listen 80 default_server;
-    # listen [::]:80 default_server;
-
-    # root /var/www/html/public;
-    # client_max_body_size 10M;
-    # add_header X-Frame-Options "SAMEORIGIN";
-    # add_header X-Content-Type-Options "nosniff";
-
-    # index index.php;
-
-    # charset utf-8;
-
-    # location / {
-    #     try_files $uri $uri/ /index.php?$query_string;
-    # }
-
-    # location = /favicon.ico {
-    #     access_log off; log_not_found off;
-    # }
-    # location = /robots.txt {
-    #     access_log off; log_not_found off;
-    # }
-
-    # error_page 404 /index.php;
-
-    # location ~ \.php$ {
-    #     fastcgi_pass 127.0.0.1:9000;
-    #     fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-    #     include fastcgi_params;
-    # }
 }
+## ==========================================================
